[package]
name = "mcrl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap             = { version = "4.1", features = ["derive"] }
comfy-table      = "6.1"
float-ord        = "0.2"
itertools        = "0.10"
rand             = "0.9.1"
rand_distr       = "0.5.1"
rand_xorshift    = "0.4"
rayon            = "1.5"
serde_json       = "1.0"
serde            = { version = "1.0", features = ["derive"] }
